--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
     "keywords": [],
     "main": "src/index.js",
     "dependencies": {
+        "@fluentui/react": "^7.107.5",
+        "axios": "^0.19.2",
+        "luxon": "^1.23.0",
+        "math-sign": "^1.0.3",
+        "math-trunc": "^1.0.1",
+        "mdn-polyfills": "^5.20.0",
+        "object-is": "^1.1.2",
+        "promise-polyfill": "8.1.3",
         "react": "16.8.6",
         "react-dom": "16.8.6",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "3.0.1",
         "react-simple-maps": "2.0.0"
     },
